# agent-lint

./: .gitignore  README.md  pyproject.toml
.github/actions/agent-lint/: action.yml
src/agent_lint/: __init__.py  cli.py  mcp.py
src/agent_lint/ci/: pytest_plugin.py  reports.py
src/agent_lint/core/: checks.py  reporter.py  validator.py
src/agent_lint/observability/: __init__.py
src/agent_lint/policies/: enforcer.py  loader.py  schema.py
src/agent_lint/protocols/a2a/: __init__.py
src/agent_lint/protocols/mcp/: assertions.py  client.py  mock.py  testing.py  validator.py
src/agent_lint/protocols/mcp/checks/: performance.py  quality.py  schema.py
src/agent_lint/protocols/mcp/checks/security/: dynamic.py  patterns.py  permissions.py  ratelimit.py  secrets.py  validation.py
tests/: conftest.py  test_assertions.py  test_checks.py  test_cli.py  test_dynamic_security.py  test_integration.py  test_junit.py  test_mock.py  test_policies.py  test_reporter.py
