[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-lint"
version = "0.1.0"
description = "Quality and security platform for AI agents. Validate MCP servers, scan for vulnerabilities, ship reliable agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "agent-lint contributors" },
]
keywords = ["mcp", "ai", "agents", "security", "validation", "lint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
]

[project.scripts]
agent-lint = "agent_lint.cli:cli"

[project.urls]
Homepage = "https://github.com/agent-lint/agent-lint"
Issues = "https://github.com/agent-lint/agent-lint/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
